style.css
html {
    scroll-behavior: smooth;
    overflow-x: hidden;
}

body {
    background-color: #1F0802;
    font-family: "Anta ", sans-serif;
}

.anta-regular {
    font-family: "Anta", sans-serif;
    font-weight: 400;
    font-style: normal;
}

a {
    text-decoration: none;
}

@media screen and (max-width:770px) {

    .navbar,
    .navbar a {
        display: none;
    }

    .container4 {
        position: absolute;
        top: 300%;
        height: 100%;
        background: #A0CD60;
        width: 100%;
    }
    
    .container4 p{
        font-size: 3rem;
        font-weight: 700;
        padding-left: 2rem;
        color: transparent;
        -webkit-text-stroke-color: #38184C;
        -webkit-text-stroke-width: 0.2rem;
    }

    .container4 .feedback-box .inputbox input {
        background-color: #A0CD60;
        color: #1F0802;
        padding: 0.5rem;
        border: 0.15rem dashed #1F0802;
        border-radius: 0.3rem;
        width: 100%;
        font-weight: 700;
        font-size: 1rem;
        outline: none;
    }
    
    .feedback-box {
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
        gap: 3rem;
    
    }
    
    .container4 .feedback-box .inputbox {
        padding-right: 1rem;
        color: #1F0802;
        display: relative;
        width: 20rem;
        font-weight: 700;
    
    }
    
    .inputbox span {
        position: absolute;
        padding: 0.5rem;
        pointer-events: none;
        transition: 0.5s;
    }

}

.navbar {
    height: 4rem;
    display: flex;
    position: fixed;
    z-index: 99;
    justify-content: space-between;
    background: #CEF09D;
    animation: slide-down 1s;
    border-radius: 1rem;
    align-items: center;
    animation: slide-right 0.5s;
}

.navbar a {

    font-size: 2rem;
    padding: 2rem;
    margin-top: 10rem;
    font-weight: 800;
    color: #38184C;
    transition: 1s;
}

.navbar a:hover {
    text-decoration: underline;
    font-size: 2.2rem;
}


#box1 {
    position: fixed;
    top: 27%;
    left: -4%;
    height: 15rem;
    width: 15rem;
    border: dashed 0.5vh #CEF09D;
    animation: slide-right 3s;
}

#box3 {
    position: fixed;
    top: 15%;
    left: -30%;
    transform: rotate(-30deg);
    opacity:15%;
    animation: slide-left 1s;
    font-size: 5rem;
}/*  i dont want this to be there on phone screen anyways */

@media screen and (min-width: 1257px) {
    #box2 {
        position: absolute;
        height: 18rem;
        width: 18rem;
        right: 1%;
        top: 50%;
        background-color: #A0CD60;
        border: 0.5vh solid #1F0802;
        border-radius: 15rem;
    }
}
@media screen and (max-width:1256px) and (min-width:830px){
#box2 {
    position: absolute;
    height: 10rem;
    width: 10rem;
    right: 1%;
    top: 45%;
    background-color: #A0CD60;
    border: 0.5vh solid #1F0802;
    border-radius: 15rem;
}
}

@media screen and (max-width:829px){
    #box2{
        display:none;
    }
}


.random1 {
    position: fixed;
    top: -3%;
    right: 27%;
    transform: rotate(-90deg);
    color: transparent;
    font-size: 4rem;
    font-weight: 900;
    -webkit-text-stroke-color: #CEF09D;
    -webkit-text-stroke-width: 0.05rem;
    animation: slide-down 2.5s;
}

/* .random2 {
    position: absolute;
    top: 2%;
    right: 23%;
    transform: rotate(-90deg);
    color: transparent;
    font-size: 4rem;
    font-weight: 900;
    -webkit-text-stroke-color: white;
    -webkit-text-stroke-width: 0.05rem;
} */

.random3 {
    position: fixed;
    top: 77%;
    left: -3%;
    transform: rotate(90deg);
    color: transparent;
    font-size: 4rem;
    font-weight: 900;
    -webkit-text-stroke-color: #CEF09D;
    -webkit-text-stroke-width: 0.05rem;
    animation: slide-right 3s;

}

@media (max-width:900px) {
    .random4 {
        display: none;
    }
}

.random4 {

    position: fixed;
    top: 67%;
    right: 3%;

    color: transparent;
    font-size: 8rem;
    font-weight: 900;
    -webkit-text-stroke-color: #CEF09D;
    -webkit-text-stroke-width: 0.05rem;
    animation: slide-up 3s;

}



.container1 pre {
    position: fixed;
    top: 50%;
    left: 25%;
    font-size: 1.5rem;
    font-weight: 600;
    color: #A0CD60;
    animation: slide-up 2.5s;
}

@media (max-width:500px) {
    .container1 pre {
        position: absolute;
        top: 65%;
        left: 35%;
        font-size: 1rem;
        font-weight: 600;
        color: #A0CD60;
        animation: slide-up 2.5s;
    }

    .container1 .main-name {
        position: absolute;
        top: 20%;
        left: 2%;
        font-size: 6rem;
        font-weight: 900;
        color: #A0CD60;
        animation: slide-right 4s;
    }
}


.random {
    transition: 0.3s;
}

.random:hover {
    color: #CEF09D;

}

.main-name {
    position: fixed;
    top: 15%;
    left: 2%;
    font-size: 8rem;
    font-weight: 900;
    color: #A0CD60;
    animation: slide-right 4s;
}

.container2 {
    position: absolute;
    top: 100%;
    height: 100%;
    background: #A0CD60;
    width: 100%;
}

.container2 p {
    font-family: 'Fira Code';font-size: 22px;
    font-size: 5rem;
    font-weight: 900;
    padding-left: 2rem;
    color: transparent;
    -webkit-text-stroke-color: #38184C;
    -webkit-text-stroke-width: 0.2rem;
}

/* @media screen and (max-width:1350px) {
    .container2 pre{
        background-color: #1F0802;
        position: absolute;
        top: 55%;
        font-size: 0.7rem;
        font-weight: 700;
        left: 5%;
        padding: 3rem;
        white-space: pre-wrap;
        word-wrap: break-word;
        text-align: justify;
        right: 5%;
        border-radius: 2rem;
        color: #A0CD60;
    }
} */

@media screen and (min-width:1420px) {
    .container2 .intro {
        color: #1F0802;
        font-size: 3rem;
        padding: 6rem;
        font-weight: 700;
        text-align: center;
        position: absolute;
        top: 17%;
    }
}

@media screen and (max-width:1419px) and (min-width:836px) {
    .container2 .intro {
        color: #1F0802;
        font-size: 2rem;
        padding: 6rem;
        font-weight: 700;
        text-align: center;
        position: absolute;
        top: 17%;
    }
}

@media screen and (min-width:565px) and (max-width:835px) {
    .container2 .intro {
        color: #1F0802;
        font-size: 1.5rem;
        padding: 6rem;
        font-weight: 700;
        text-align: center;
        position: absolute;
        top: 17%;
    }
}

@media screen and (max-width:565px){
    .container2 .intro {
        color: #1F0802;
        font-size: 1.2rem;
        padding: 3rem;
        font-weight: 700;
        text-align: center;
        position: absolute;
        top: 17%;
    }
    .container2 p{
        font-family: 'Fira Code';font-size: 22px;
        font-size: 3rem;
        font-weight: 600;
        padding-left: 2rem;
        color: transparent;
        -webkit-text-stroke-color: #38184C;
        -webkit-text-stroke-width: 0.09rem;
    }
}

.container2 pre {
    font-family: 'Fira Code';font-size: 22px;
    background-color: #1F0802;
    position: absolute;
    top: 55%;
    font-size: 0.6rem;
    font-weight: 700;
    left: 5%;
    padding: 5rem;
    white-space: pre-wrap;
    word-wrap: break-word;
    text-align: justify;
    right: 5%;
    border-radius: 2rem;
    color: #A0CD60;
}

.intro span {
    color: #5d2b7c;
}

.container3 {
    position: absolute;
    top: 200%;
    height: 100%;
    background: #1F0802;
    width: 100%;
}
@media screen and  (min-width:751px){
.container3 p {
    position: absolute;
    top: -10%;
    right: 3%;

    color: transparent;
    font-size: 8rem;
    font-weight: 900;
    -webkit-text-stroke-color: #CEF09D;
    -webkit-text-stroke-width: 0.05rem;
    animation: slide-up 3s;
}

.project-grid {

    padding-top: 20em;
    display: flex;
    justify-content: space-around;

}

.project {
    vertical-align: middle;
    height: 20rem;
    width: 15rem;
    border-radius: 2rem;
    border: dashed 0.5vh #A0CD60;
    transition: 1s ease-out;
    color: #A0CD60;
    font-size: 2rem;
    text-align: center;
    font-weight: 700;
}

.project:hover {
    background: #A0CD60;
    color: #5d2b7c;
    height: 22rem;
    width: 17rem;

}

.project h5 {
    color: #1F0802;
    padding: 1rem;
}
}
@media screen and (max-width: 750px) {
    .container3 p {
        position: absolute;
        top: -5%;
        right: 3%;
        color: transparent;
        font-size: 3rem;
        font-weight: 900;
        -webkit-text-stroke-color: #CEF09D;
        -webkit-text-stroke-width: 0.05rem;
        animation: slide-up 3s;
    }
    
    .container3 .project-grid {
        padding-top: 8rem; 
        display: block; 
    }
    
    .container3 .project-grid .project {
        height: auto; 
        width: 90%;
        margin: 0 auto 2rem;
        border-radius: 2rem;
        /* border: dashed 0.5vh #A0CD60; */
        transition: 1s ease-out;
        color: #A0CD60;
        font-size: 1.5rem; 
        text-align: center;
        font-weight: 700;
    }
    
    .container3 .project-grid .project a {
        display: block; 
        height: 100%; 
        width: 100%; 
    }
    
    .container3 .project-grid .project:hover {
        background: #A0CD60;
        color: #5d2b7c;
        
    }
    
    .container3 .project-grid .project h5 {
        color: #1F0802;
        padding: 1rem;
    }
}


.container4 {
    position: absolute;
    top: 300%;
    height: 100%;
    background: #A0CD60;
    width: 100%;
}

.container4 p {
    font-size: 5rem;
    font-weight: 900;
    padding-left: 2rem;
    color: transparent;
    -webkit-text-stroke-color: #38184C;
    -webkit-text-stroke-width: 0.2rem;
}

.input {
    background-color: #A0CD60;
    color: #1F0802;
    padding: 0.5rem;
    border: 0.15rem dashed #1F0802;
    border-radius: 0.3rem;
    width: 100%;
    font-weight: 700;
    font-size: 1rem;
    outline: none;
}

.feedback-box {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 3rem;

}

.inputbox {
    color: #1F0802;
    display: relative;
    width: 40rem;
    font-weight: 700;

}

.inputbox span {
    position: absolute;
    padding: 0.5rem;
    pointer-events: none;
    transition: 0.5s;
}

.links-bg {
    position: absolute;
    width: 100%;
    height: 20%;
    top: 80%;
    background-color: #CEF09D;


}

.links {
    display: flex;
    justify-content: center;

}

.links img {
    padding-top: 3rem;
    padding-inline: 1rem;
}






@keyframes slide-right {
    from {
        left: -50%;
    }
}

@keyframes slide-up {
    from {
        top: 150%;
    }
}

@keyframes slide-down {
    from {
        top: -50%;
    }
}

@keyframes slide-left {
    from {
        left: 150%;
    }
}

